# SimpleTextLayoutRender

./: .gitignore  CMakeLists.txt  Color.h  Font.cpp  Font.h  FreeTypeFontMetrics.cpp  FreeTypeFontMetrics.h  GlyphInfo.h  LayoutEngine.cpp  LayoutEngine.h  PaintDevice.cpp  PaintDevice.h  PaintEngine.h  README.md  TextParagraph.cpp  TextParagraph.h  TextRun.h  main.cpp
.github/workflows/: cmake-single-platform.yml
